yaml upate: upadte branch

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
         run: heroku git:remote --app=${{secrets.HEROKU_APP_NAME}}
       - name: Setup heroku env
         run: heroku config:set DATABASE_URL=${{secrets.DATABASE_URL}}
-      - name: push heroku to master
+      - name: push heroku to main
         run: |
           git fetch --unshallow origin
-          git push heroku master
+          git push heroku main
