yaml upate: upadte branch

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Add heroku remote
         run: heroku git:remote --app=${{secrets.HEROKU_APP_NAME}}
       - name: Setup heroku env
-        run: heroku config:set DATABASE_URL=${{secrets.DATABASE_URL}}
+        run: heroku config:set DATABASE_URL=mongodb+srv://lordrians:mongoDb*()890@cluster0.4iodyi8.mongodb.net/?retryWrites=true&w=majority
       - name: push heroku to master
         run: |
           git fetch --unshallow origin
