adjust yaml , add database env

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,9 +26,9 @@ jobs:
       - name: Add heroku remote
         run: heroku git:remote --app=${{secrets.HEROKU_APP_NAME}}
       - name: Setup heroku env
-        run: heroku config:set DATABASE_URL=${{secrets.DATABASE_URL}}
         env:
           DATABASE_URL: ${{secrets.DATABASE_URL}}
+          run: echo "${{env.DATABASE_URL}}"
       - name: push heroku to master
         run: |
           git fetch --unshallow origin
