--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,14 +11,15 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      DATABASE_URL: ${{secrets.DATABASE_URL}}
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Setup Env
+        run: export DATABASE_URL="${{secrets.DATABASE_URL}}"
       - name: Create heroku config gile
         run: |
           cat >~/.netrc <<EOF
